rename page.css 4

--- a/calendar_agenda.html
+++ b/calendar_agenda.html
@@ -4548,7 +4548,7 @@
                                 <div dir="ltr">
                                   <div class="spinner-chart__input-currency">
                                     <div class="spinner-chart__input-currency-text">
-                                      <div class="_j1kt73">₱</div>
+                                      <div class="spinner-chart__input-currency-logo">₱</div>
                                     </div>
                                     <input
                                       class="form__input"
@@ -4579,7 +4579,7 @@
                                 <div dir="ltr">
                                   <div class="spinner-chart__input-currency">
                                     <div class="spinner-chart__input-currency-text">
-                                      <div class="_j1kt73">From ₱</div>
+                                      <div class="spinner-chart__input-currency-logo">From ₱</div>
                                     </div>
                                     <input
                                       class="form__input"
