--- a/help.html
+++ b/help.html
@@ -71,7 +71,7 @@
                           <a
                             data-testid="help-center-header-hc-logo"
                             href="/help"
-                            class="_1mt76m69"
+                            class="help-center__link"
                             >Help Center<span class="text-highlight dir dir-ltr">
                               <!-- -->–
                               <!-- -->home page</span
@@ -397,7 +397,7 @@
                                           <div class="bdgk6rj dir dir-ltr">
                                             <a
                                               href="/help/all-topics"
-                                              class="_1mt76m69"
+                                              class="help-center__link"
                                               ><span
                                                 class="d-inline-flex atm_vh_yfq0k3 atm_ar_vrvcex f-items-center dir dir-ltr"
                                                 ><span class="dir dir-ltr"
@@ -2479,7 +2479,7 @@
                                           <div class="bdgk6rj dir dir-ltr">
                                             <a
                                               href="/help/all-topics"
-                                              class="_1mt76m69"
+                                              class="help-center__link"
                                               ><span
                                                 class="d-inline-flex atm_vh_yfq0k3 atm_ar_vrvcex f-items-center dir dir-ltr"
                                                 ><span class="dir dir-ltr"
@@ -3535,7 +3535,7 @@
                                           <div class="bdgk6rj dir dir-ltr">
                                             <a
                                               href="/help/all-topics"
-                                              class="_1mt76m69"
+                                              class="help-center__link"
                                               ><span
                                                 class="d-inline-flex atm_vh_yfq0k3 atm_ar_vrvcex f-items-center dir dir-ltr"
                                                 ><span class="dir dir-ltr"
@@ -4589,7 +4589,7 @@
                                           <div class="bdgk6rj dir dir-ltr">
                                             <a
                                               href="/help/all-topics"
-                                              class="_1mt76m69"
+                                              class="help-center__link"
                                               ><span
                                                 class="d-inline-flex atm_vh_yfq0k3 atm_ar_vrvcex f-items-center dir dir-ltr"
                                                 ><span class="dir dir-ltr"
