--- a/inbox.html
+++ b/inbox.html
@@ -956,7 +956,7 @@
                                   </div>
                                 </div>
                                 <div class="_q02l2y"></div>
-                                <div class="_j1kt73">
+                                <div class="spinner-chart__input-currency-logo">
                                   <div
                                     data-testid="host-inbox-thread"
                                     data-unread="false"
