--- a/insights.html
+++ b/insights.html
@@ -1481,7 +1481,7 @@
                                     class="heading"
                                     elementtiming="LCP-target"
                                   >
-                                    <span class="_lo9vot">Expertise</span>
+                                    <span class="resolution__reservation-continer-text">Expertise</span>
                                   </h1>
                                 </section>
                                 <p class="_wc65yc">
@@ -1512,7 +1512,7 @@
                                     class="heading"
                                     elementtiming="LCP-target"
                                   >
-                                    <span class="_lo9vot">Insider access</span>
+                                    <span class="resolution__reservation-continer-text">Insider access</span>
                                   </h1>
                                 </section>
                                 <p class="_wc65yc">
@@ -1543,7 +1543,7 @@
                                     class="heading"
                                     elementtiming="LCP-target"
                                   >
-                                    <span class="_lo9vot">Connection</span>
+                                    <span class="resolution__reservation-continer-text">Connection</span>
                                   </h1>
                                 </section>
                                 <p class="_wc65yc">
