--- a/payment.html
+++ b/payment.html
@@ -441,7 +441,7 @@
                                               style="padding-bottom: 24px"
                                             >
                                               <fieldset class="_1rshn0">
-                                                <legend class="_1gyjybc">
+                                                <legend class="pa-0">
                                                   <span
                                                     class="text-highlight dir dir-ltr"
                                                     >Payment plan</span
