--- a/payments/payment-methods.html
+++ b/payments/payment-methods.html
@@ -577,7 +577,7 @@
                                                     </div>
                                                   </div>
                                                   <div class="_1mqc21n">
-                                                    <div class="_lo9vot">
+                                                    <div class="resolution__reservation-continer-text">
                                                       $0.00
                                                     </div>
                                                   </div>
@@ -634,7 +634,7 @@
                                                     </div>
                                                   </div>
                                                   <div class="_1mqc21n">
-                                                    <div class="_lo9vot">0</div>
+                                                    <div class="resolution__reservation-continer-text">0</div>
                                                   </div>
                                                 </div>
                                               </div>
@@ -1352,7 +1352,7 @@
                                                     </div>
                                                   </div>
                                                   <div class="_1mqc21n">
-                                                    <div class="_lo9vot">
+                                                    <div class="resolution__reservation-continer-text">
                                                       $0.00
                                                     </div>
                                                   </div>
@@ -1409,7 +1409,7 @@
                                                     </div>
                                                   </div>
                                                   <div class="_1mqc21n">
-                                                    <div class="_lo9vot">0</div>
+                                                    <div class="resolution__reservation-continer-text">0</div>
                                                   </div>
                                                 </div>
                                               </div>
