--- a/privacy-and-sharing.html
+++ b/privacy-and-sharing.html
@@ -431,7 +431,7 @@
                                                           <div class="explore-filter-menu__list-label">
                                                             <a
                                                               href="/privacy/manage-your-data/deletion"
-                                                              class="_1mt76m69"
+                                                              class="help-center__link"
                                                               ><span
                                                                 class="privacy-sharing__manage-acc-title"
                                                                 ><div
@@ -1103,7 +1103,7 @@
                                                   <div class="explore-filter-menu__list-label">
                                                     <a
                                                       href="/privacy/manage-your-data/deletion"
-                                                      class="_1mt76m69"
+                                                      class="help-center__link"
                                                       ><span class="privacy-sharing__manage-acc-title"
                                                         ><div
                                                           id="erasure-row-row-title"
