--- a/products.html
+++ b/products.html
@@ -5655,7 +5655,7 @@
                                                         <li
                                                           aria-hidden="false"
                                                           data-key="677891021666328920"
-                                                          class="_1w7e1y2"
+                                                          class="feature__airbnb-li"
                                                           style="
                                                             border-width: 0px
                                                               6px;
@@ -5795,7 +5795,7 @@
                                                         <li
                                                           aria-hidden="false"
                                                           data-key="675691390681590266"
-                                                          class="_1w7e1y2"
+                                                          class="feature__airbnb-li"
                                                           style="
                                                             border-width: 0px
                                                               6px;
@@ -6052,7 +6052,7 @@
                                                         <li
                                                           aria-hidden="false"
                                                           data-key="652537737999961308"
-                                                          class="_1w7e1y2"
+                                                          class="feature__airbnb-li"
                                                           style="
                                                             border-width: 0px
                                                               6px;
@@ -6240,7 +6240,7 @@
                                                         <li
                                                           aria-hidden="false"
                                                           data-key="seeAllReviewsButton"
-                                                          class="_1w7e1y2"
+                                                          class="feature__airbnb-li"
                                                           style="
                                                             border-width: 0px
                                                               6px;
@@ -9215,7 +9215,7 @@
                                             >
                                               <div class="_17twi95">
                                                 <div class="_yauuy6">
-                                                  <div class="_14f4nnk">
+                                                  <div class="main-content__details-cancel-button-text">
                                                     <button
                                                       type="button"
                                                       class="link"
@@ -9225,7 +9225,7 @@
                                                       </div>
                                                     </button>
                                                   </div>
-                                                  <div class="_14f4nnk">
+                                                  <div class="main-content__details-cancel-button-text">
                                                     <button
                                                       type="button"
                                                       class="link"
@@ -9235,7 +9235,7 @@
                                                       </div>
                                                     </button>
                                                   </div>
-                                                  <div class="_14f4nnk">
+                                                  <div class="main-content__details-cancel-button-text">
                                                     <button
                                                       type="button"
                                                       class="link"
@@ -9245,7 +9245,7 @@
                                                       </div>
                                                     </button>
                                                   </div>
-                                                  <div class="_14f4nnk">
+                                                  <div class="main-content__details-cancel-button-text">
                                                     <button
                                                       type="button"
                                                       class="link"
