--- a/profile-reviews.html
+++ b/profile-reviews.html
@@ -211,7 +211,7 @@
                   <div>
                     <div class="inherit-hide-print">
                       <nav aria-label="Main navigation menu">
-                        <ul class="_1s04l2o">
+                        <ul class="resource-center__wrapper-ul">
                           <li class="profile-reviews__logo-xl"></li>
                           <li class="profile-reviews__logo-xl">
                             <div>
