--- a/profile.html
+++ b/profile.html
@@ -1166,7 +1166,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                                   <li
                                                     aria-hidden="false"
                                                     data-key="3745068"
-                                                    class="_1w7e1y2"
+                                                    class="feature__airbnb-li"
                                                     style="
                                                       border-width: 0px 6px;
                                                       max-width: 44.4444%;
@@ -2243,7 +2243,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                             <li
                                               aria-hidden="false"
                                               data-key="3745068"
-                                              class="_1w7e1y2"
+                                              class="feature__airbnb-li"
                                               style="
                                                 border-width: 0px 10px 0px 10px;
                                                 max-width: 33.333333333333336%;
