--- a/resolutions_pay.html
+++ b/resolutions_pay.html
@@ -176,7 +176,7 @@
                     <div data-showat="largeAndAbove">
                       <div class="inherit-hide-print">
                         <nav aria-label="Main navigation menu">
-                          <ul class="_1s04l2o">
+                          <ul class="resource-center__wrapper-ul">
                             <li class="profile-reviews__logo-xl">
                               <div>
                                 <div class="relative">
@@ -368,20 +368,20 @@
             </header>
             <main id="site-content">
               <div class="resolution-body__container">
-                <div class="_5702fc7">
-                  <section class="_1xwopax">
-                    <h1 class="_223ai7v" id="FMP-target">
+                <div class="resolution-body__wrapper">
+                  <section class="resolution-body__section">
+                    <h1 class="resolution-body__text-h1" id="FMP-target">
                       You sent ₱1 to Kuniatsu
                     </h1>
                     <div
-                      class="_1mk0p35"
+                      class="resolution__complete-container"
                       role="group"
                       aria-label="Completed"
                       tabindex="-1"
                     >
-                      <div class="_g2jl76">
-                        <div class="_1iel0uu">
-                          <div class="_1nrp5up">
+                      <div class="resolution__complete-wapper">
+                        <div class="resolution__complete-content">
+                          <div class="resolution__complete-icon">
                             <svg
                               viewBox="0 0 48 48"
                               xmlns="http://www.w3.org/2000/svg"
@@ -408,14 +408,14 @@
                             </svg>
                           </div>
                           <div class="w-full">
-                            <div class="_1nees9c">Completed</div>
+                            <div class="resolution__complete-text">Completed</div>
                           </div>
                         </div>
                       </div>
                     </div>
                     <section aria-label="Reservation">
-                      <div class="_40z4k8">
-                        <div class="_1js2oqjc">
+                      <div class="resolution__reservation-continer">
+                        <div class="resolution__reservation-wrapper">
                           <div
                             class="img-middle"
                             role="img"
@@ -455,8 +455,8 @@
                           </div>
                         </div>
                         <div>
-                          <div class="_lo9vot">Kuniatsu</div>
-                          <div class="_10rf6ea">
+                          <div class="resolution__reservation-continer-text">Kuniatsu</div>
+                          <div class="resolution__reservation-continer-wrapper">
                             <ol class="place__rate-text dir dir-ltr">
                               <li class="place__rate-text-li dir dir-ltr">
                                 <span>Jun 12 - Jun 12, 2022</span>
@@ -525,7 +525,7 @@
                 </div>
               </div>
               <div class="_rcdw8v">
-                <div class="resolution-body__container"><div class="_1b2q9mig"></div></div>
+                <div class="resolution-body__container"><div class="resolution-body__container-spacer"></div></div>
               </div>
             </main>
           </div>
