--- a/reviews-tell-us.html
+++ b/reviews-tell-us.html
@@ -36,11 +36,11 @@
             <div id="FMP-target">
               <div>
                 <div>
-                  <div class="_hfnjlw">
-                    <header class="_jgtn573">
-                      <div class="_1v0rfuj">
+                  <div class="h-64">
+                    <header class="review-header">
+                      <div class="review-header__wrapper">
                         <div class="flex-items-center">
-                          <div class="_uvp3p0" data-testid="icon">
+                          <div class="review-header__wrapper-icon" data-testid="icon">
                             <a href="/" class="main-content__agenda-list-btn"
                               ><svg
                                 viewBox="0 0 32 32"
@@ -61,7 +61,7 @@
                             ></a>
                           </div>
                         </div>
-                        <div class="_1mejhadq" data-testid="children"></div>
+                        <div class="review-header__step-1" data-testid="children"></div>
                       </div>
                     </header>
                   </div>
@@ -100,18 +100,18 @@
                             ></div>
                           </div>
                         </div>
-                        <div class="_fkfey3">
+                        <div class="my-24">
                           <section>
                             <h1
                               tabindex="-1"
                               class="heading"
                               elementtiming="LCP-target"
                             >
-                              <div class="_5nym0h">
+                              <div class="account-container__menu-container-h1-text">
                                 Tell us more about your experience
                               </div>
                             </h1>
-                            <div class="_4egw05">
+                            <div class="account-container__menu-container-desc">
                               In this next section, you’ll be able to share more
                               details so we can better understand your booking
                               and help future guests have an even better
