--- a/reviews.html
+++ b/reviews.html
@@ -39,11 +39,11 @@
           <div>
             <div id="FMP-target">
               <div>
-                <div class="_hfnjlw">
-                  <header class="_jgtn573">
-                    <div class="_1v0rfuj">
+                <div class="h-64">
+                  <header class="review-header">
+                    <div class="review-header__wrapper">
                       <div class="flex-items-center">
-                        <div class="_uvp3p0" data-testid="icon">
+                        <div class="review-header__wrapper-icon" data-testid="icon">
                           <a href="/" class="main-content__agenda-list-btn"
                             ><svg
                               viewBox="0 0 32 32"
@@ -64,16 +64,16 @@
                           ></a>
                         </div>
                       </div>
-                      <div class="_1mejhadq" data-testid="children">
+                      <div class="review-header__step-1" data-testid="children">
                         <span class="text-highlight dir dir-ltr" tabindex="-1"
                           >Step 1</span
                         >
                       </div>
                       <div class="_1as7kh5l" data-testid="after">
                         <div class="main-content__details-cancel-button-wrapper">
-                          <div class="_14f4nnk hidden d-md-inline-block">
+                          <div class="main-content__details-cancel-button-text hidden d-md-inline-block">
                             <div class="hidden block-md">
-                              <span class="_10rf6ea"
+                              <span class="resolution__reservation-continer-wrapper"
                                 >Last saved a few seconds ago</span
                               >
                             </div>
@@ -94,19 +94,19 @@
                         <div class="_15d5qr9n">
                           <div class="_1nu4ve4">
                             <div class="_ihd0yx">
-                              <div class="_fkfey3">
+                              <div class="my-24">
                                 <section>
                                   <h1
                                     tabindex="-1"
                                     class="heading"
                                     elementtiming="LCP-target"
                                   >
-                                    <div class="_5nym0h">
+                                    <div class="account-container__menu-container-h1-text">
                                       Overall, how would you rate Jose Angelo’s
                                       experience?
                                     </div>
                                   </h1>
-                                  <div class="_4egw05">
+                                  <div class="account-container__menu-container-desc">
                                     Cooking Deep Fried Bright Orange Battered
                                     Eggs
                                   </div>
@@ -345,14 +345,14 @@
                         <div class="_15d5qr9n">
                           <div class="_1nu4ve4">
                             <div class="_ihd0yx">
-                              <div class="_fkfey3">
+                              <div class="my-24">
                                 <section>
                                   <h1
                                     tabindex="-1"
                                     class="heading"
                                     elementtiming="LCP-target"
                                   >
-                                    <div class="_5nym0h">
+                                    <div class="account-container__menu-container-h1-text">
                                       How did the experience compare with your
                                       expectations?
                                     </div>
@@ -771,30 +771,30 @@
                         <div class="_15d5qr9n">
                           <div class="_1nu4ve4">
                             <div class="_ihd0yx">
-                              <div class="_fkfey3">
+                              <div class="my-24">
                                 <section>
                                   <h1
                                     tabindex="-1"
                                     class="heading"
                                     elementtiming="LCP-target"
                                   >
-                                    <div class="_5nym0h">
+                                    <div class="account-container__menu-container-h1-text">
                                       Was anything extra special?
                                     </div>
                                   </h1>
-                                  <div class="_4egw05">
+                                  <div class="account-container__menu-container-desc">
                                     Choose what you loved the most.
                                   </div>
                                 </section>
                               </div>
                               <div class="_1fopc40">
                                 <fieldset class="_128xze2">
-                                  <legend class="_1gyjybc">
+                                  <legend class="pa-0">
                                     <span class="text-highlight dir dir-ltr"
                                       >Was anything extra special?</span
                                     >
                                   </legend>
-                                  <div class="_m9c03w">
+                                  <div class="appreciation-text">
                                     <label
                                       for="appreciation_social_bonding"
                                       class="_urx1gd"
@@ -846,7 +846,7 @@
                                       </div></label
                                     >
                                   </div>
-                                  <div class="_m9c03w">
+                                  <div class="appreciation-text">
                                     <label
                                       for="appreciation_storytelling"
                                       class="_urx1gd"
@@ -898,7 +898,7 @@
                                       </div></label
                                     >
                                   </div>
-                                  <div class="_m9c03w">
+                                  <div class="appreciation-text">
                                     <label
                                       for="appreciation_setting"
                                       class="_urx1gd"
@@ -950,7 +950,7 @@
                                       </div></label
                                     >
                                   </div>
-                                  <div class="_m9c03w">
+                                  <div class="appreciation-text">
                                     <label
                                       for="appreciation_personalization"
                                       class="_urx1gd"
@@ -1002,7 +1002,7 @@
                                       </div></label
                                     >
                                   </div>
-                                  <div class="_m9c03w">
+                                  <div class="appreciation-text">
                                     <label
                                       for="appreciation_value"
                                       class="_urx1gd"
@@ -1054,7 +1054,7 @@
                                       </div></label
                                     >
                                   </div>
-                                  <div class="_m9c03w">
+                                  <div class="appreciation-text">
                                     <label
                                       for="appreciation_family_friendly"
                                       class="_urx1gd"
@@ -1122,19 +1122,19 @@
                         <div class="_15d5qr9n">
                           <div class="_1nu4ve4">
                             <div class="_ihd0yx">
-                              <div class="_fkfey3">
+                              <div class="my-24">
                                 <section>
                                   <h1
                                     tabindex="-1"
                                     class="heading"
                                     elementtiming="LCP-target"
                                   >
-                                    <div class="_5nym0h">
+                                    <div class="account-container__menu-container-h1-text">
                                       Is there anything that could’ve been
                                       better?
                                     </div>
                                   </h1>
-                                  <div class="_4egw05">
+                                  <div class="account-container__menu-container-desc">
                                     Jose Angelo uses these answers to make their
                                     experience better.
                                   </div>
@@ -1269,14 +1269,14 @@
                         <div class="_15d5qr9n">
                           <div class="_1nu4ve4">
                             <div class="_ihd0yx">
-                              <div class="_fkfey3">
+                              <div class="my-24">
                                 <section>
                                   <h1
                                     tabindex="-1"
                                     class="heading"
                                     elementtiming="LCP-target"
                                   >
-                                    <div class="_5nym0h">
+                                    <div class="account-container__menu-container-h1-text">
                                       Last step. Write a review for this
                                       experience
                                     </div>
