--- a/signup_login.html
+++ b/signup_login.html
@@ -2072,7 +2072,7 @@
                             </header>
                             <div class="_7lvai1" aria-labelledby="panel-header">
                               <div data-testid="login-pane">
-                                <div class="_lo9vot">Choose another way to get a verification code at +63 9127361231
+                                <div class="resolution__reservation-continer-text">Choose another way to get a verification code at +63 9127361231
                                 </div>
                                 <div class="_1o3ag24">Make sure your notifications are turned on.</div>
                                 <div class="border-bottom-muted">
@@ -5333,7 +5333,7 @@
                             </header>
                             <div class="_7lvai1" aria-labelledby="panel-header">
                               <div data-testid="login-pane">
-                                <div class="_lo9vot">Choose another way to get a verification code at +63 9127361231
+                                <div class="resolution__reservation-continer-text">Choose another way to get a verification code at +63 9127361231
                                 </div>
                                 <div class="_1o3ag24">Make sure your notifications are turned on.</div>
                                 <div class="border-bottom-muted">
