--- a/specific_trip.html
+++ b/specific_trip.html
@@ -1607,7 +1607,7 @@
                                                     </div>
                                                   </div>
                                                   <div class="_1shk545">
-                                                    <div class="_1nees9c">
+                                                    <div class="resolution__complete-text">
                                                       About your host
                                                     </div>
                                                     <div class="_hiyd6v">
