--- a/submission/review.html
+++ b/submission/review.html
@@ -1442,7 +1442,7 @@
                               class="btn-dark--small"
                               data-veloute="lyt-next-button"
                             >
-                              <span class="_j1kt73">Submit</span>
+                              <span class="spinner-chart__input-currency-logo">Submit</span>
                             </button>
                           </div>
                         </footer>
