--- a/trips.html
+++ b/trips.html
@@ -275,7 +275,7 @@
                                       </div>
                                       <div class="svigw52 dir dir-ltr">
                                         <span
-                                          class="_y9cbsa"
+                                          class="page-shell-mobile__container-text"
                                           style="
                                             --tl-color: #717171;
                                             --tl-font-size: 14px;
@@ -699,7 +699,7 @@
                                   <div>
                                     <span class="t1wc0j5d dir dir-ltr"
                                       ><span
-                                        class="_y9cbsa"
+                                        class="page-shell-mobile__container-text"
                                         style="
                                           --tl-color: #222222;
                                           --tl-font-size: 14px;
