--- a/wishlists.html
+++ b/wishlists.html
@@ -288,7 +288,7 @@
                                                 id="1148602671-row-subtitle"
                                                 class="personal-info__phone-number-desc"
                                               >
-                                                <div class="_10rf6ea">
+                                                <div class="resolution__reservation-continer-wrapper">
                                                   Sep 3 – 5
                                                 </div>
                                               </div>
