--- a/resolutions_2.html
+++ b/resolutions_2.html
@@ -102,16 +102,16 @@
             </header>
             <main id="site-content">
               <div class="resolution-body__container">
-                <div class="_1b2q9mig">
+                <div class="resolution-body__container-spacer">
                   <section>
-                    <h1 class="_223ai7v" id="FMP-target">
+                    <h1 class="resolution-body__text-h1" id="FMP-target">
                       Send money - Airbnb
                     </h1>
                     <section class="payment-method__section">
                       <h2 class="payment-method__section-text">Send to</h2>
                       <div class="explore-filter-menu__body-content">
-                        <div class="_40z4k8">
-                          <div class="_1js2oqjc">
+                        <div class="resolution__reservation-continer">
+                          <div class="resolution__reservation-wrapper">
                             <div
                               class="img-middle"
                               role="img"
@@ -151,8 +151,8 @@
                             </div>
                           </div>
                           <div>
-                            <div class="_lo9vot">Kuniatsu</div>
-                            <div class="_10rf6ea">
+                            <div class="resolution__reservation-continer-text">Kuniatsu</div>
+                            <div class="resolution__reservation-continer-wrapper">
                               <ol class="place__rate-text dir dir-ltr">
                                 <li class="place__rate-text-li dir dir-ltr">
                                   <span>Jun 13 - Jun 13, 2022</span>
